--- a/src/_includes/serviceswebcta.njk
+++ b/src/_includes/serviceswebcta.njk
@@ -94,7 +94,7 @@
         </a>
 
         <a
-          href="#ritualdeproteccion"
+          href="#webcontacto"
           id="secondaryCta"
           class="px-8 py-4 text-lg font-bold text-white border-2 border-[#d4af37] rounded-lg hover:bg-[#d4af37]/10 transition-all opacity-0 translate-y-10"
         >
