--- a/src/_includes/serviceswebfaq.njk
+++ b/src/_includes/serviceswebfaq.njk
@@ -51,11 +51,10 @@
         ¿Tu pregunta no está en los pergaminos?
       </h3>
       <p class="mb-6 text-gray-300">
-        El oráculo TKOTech responderá en menos de 13 minutos (número de la
-        suerte)
+        El oráculo TKOTech responderá en menos de 13 lunas (número de la suerte)
       </p>
       <a
-        href="#"
+        href="/#contacto"
         class="inline-flex items-center justify-center px-8 py-3 text-base font-medium text-[#0a0f2b] bg-[#d4af37] rounded-lg hover:bg-[#f1c954] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#d4af37]"
       >
         Consultar al Oráculo
