--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -25,3 +25,52 @@
 .solomon-seal:hover {
   transform: rotate(360deg) scale(1.1);
 }
+
+/* animacion de los puntos del componente del CTA de la pagina de software */
+.animate-float {
+  animation: float 6s ease-in-out infinite;
+}
+.animate-float-delay {
+  animation: float 7s ease-in-out 1s infinite;
+}
+@keyframes float {
+  0%,
+  100% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 0.1;
+  }
+  50% {
+    transform: translateY(-30px) rotate(5deg);
+    opacity: 0.3;
+  }
+}
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+@keyframes pulse {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+}
+
+/* animacion del hero del home */
+
+@keyframes p-float {
+  0%,
+  100% {
+    transform: translateY(0) rotate(0deg);
+  }
+  50% {
+    transform: translateY(-30px) rotate(5deg);
+  }
+}
+.animate-p-float {
+  animation: p-float 8s ease-in-out infinite;
+}
+.animate-p-float-delay {
+  animation: p-float 8s ease-in-out 2s infinite;
+}
