--- a/src/_includes/serviceswebfunnel.njk
+++ b/src/_includes/serviceswebfunnel.njk
@@ -337,9 +337,7 @@
           document
             .getElementById("completeRitual")
             ?.addEventListener("click", function () {
-              alert(
-                "¡Ritual completado! Tus defensas digitales se activarán en el próximo ciclo lunar."
-              );
+              document.location.href = "/#contacto";
             });
         });
     });
